--- a/src/main/resources/static/css/member.css
+++ b/src/main/resources/static/css/member.css
@@ -76,11 +76,11 @@ main { margin-top: 3%; }
 .side_2 { padding-left: 60px; }
 .go_planner button { margin-top: 20%; border: none; background-color: #FF7A00; border-radius: 10px; width: 130px; height: 50px; color: white; font-family: NPSfontRegular; font-size: 0.9em; }
 
-.memberFrm { background-color: #ededed; width: 650px; height: 700px; border-radius: 32px; padding: 20px 40px; }
+.memberFrm { background-color: #ededed; width: 650px; height: 840px; border-radius: 32px; padding: 20px 40px; }
 .memberFrm div { margin-bottom: 30px; }
 .memberFrm h4 { font-family: NPSfontBold; font-size: 1.2em; padding-top: 10px; }
 
-.input_id input:focus, .input_name input:focus, .input_nickname input:focus, .input_pw input:focus, .input_pw2 input:focus, .input_phone input:focus { outline: none; }
+.input_id input:focus, .input_name input:focus, .input_searchadd, .input_nickname input:focus, .input_pw input:focus, .input_pw2 input:focus, .input_phone input:focus, .input_address input { outline: none; }
 
 .input_id { display: flex; justify-content: space-between; width: 570px; align-items: center; }
 .input_id input { border: none; border-radius: 10px; width: 190px; height: 46px; padding-left: 20px; font-size: 0.9em; }
@@ -92,6 +92,15 @@ main { margin-top: 3%; }
 .input_nickname input { margin-left: 6.5%; border: none; border-radius: 10px; width: 230px; height: 46px; padding-left: 20px; padding-right: 20px; font-size: 0.9em; }
 .input_nickname input::placeholder { text-align: center; font-size: 0.75em; }
 .input_nickname button { margin-left: 5%; border: none; background-color: #FF7A00; border-radius: 10px; width: 70px; height: 46px; font-size: 0.75em; font-family: NPSfontBold; color: white; }
+
+
+.input_searchadd { display: flex; }
+.input_searchadd input { margin-left: 6.5%; border: none; border-radius: 10px; width: 230px; height: 46px; padding-left: 20px; padding-right: 20px; font-size: 0.9em; }
+.input_searchadd input::placeholder { text-align: center; font-size: 0.75em; }
+.input_searchadd button { margin-left: 5%; border: none; background-color: #FF7A00; border-radius: 10px; width: 70px; height: 46px; font-size: 0.75em; font-family: NPSfontBold; color: white; }
+
+
+
 
 .input_pw { display: flex; }
 .input_pw input { margin-left: 3.5%; width: 300px; height: 46px; border: none; border-radius: 10px; padding-left: 20px; padding-right: 20px; font-size: 0.9em; }
@@ -106,9 +115,10 @@ main { margin-top: 3%; }
 .input_phone input { width: 70px; height: 46px; border: none; border-radius: 10px; padding-left: 20px; padding-right: 20px; }
 
 .input_address { display: flex; align-items: center; }
+.input_address h4 { width: 50px; }
 .input_address input { border: none; border-radius: 10px; padding-left: 20px; padding-right: 20px; }
 .add1 { margin-left: 10%; width: 300px; height: 46px; }
-.add2 { margin-left: 2%; width: 150px; height: 46px; }
+.add2 { margin-left: 10%; margin-top: 2%; width: 300px; height: 46px; }
 .add2::placeholder { font-size: 0.75em; text-align: center; }
 
 .email_radio, .sms_radio { display: flex; align-items: center; }
@@ -184,6 +194,7 @@ footer { border-top:3px solid #FF7A00; background-color: white;padding-top: 0; }
     .memberPage_title { margin-left: 0; }
     .side_ad { display: none; }
     .member_main { padding: 0 13px; }
+
     
 }
 /* 화면크기 최대 768px까지 */
@@ -209,6 +220,8 @@ footer { border-top:3px solid #FF7A00; background-color: white;padding-top: 0; }
 
     .member_subBtn { display: flex; justify-content: space-between; padding: 80px 0px; }
     .member_subBtn input { width: 120px; height: 50px; color: white; background-color: #FF7A00; font-family: NPSfontBold; }
+
+    .add2 { width: 300px; }
 }
 
 /* 화면크기 최소641px 부터 1120px까지 */
@@ -246,7 +259,7 @@ footer { border-top:3px solid #FF7A00; background-color: white;padding-top: 0; }
 
     /* o */
     /* 모바일 회원가입 폼 */
-    .memberFrm { background-color: #ededed; width: 365px; height: 790px; border-radius: 32px; padding: 20px 30px; margin-left: 0; }
+    .memberFrm { background-color: #ededed; width: 365px; height: 850px; border-radius: 32px; padding: 20px 30px; margin-left: 0; }
     .memberFrm div { margin-bottom: 30px; }
     .memberPage_title { margin-top: 10%; }
     .memberPage_title h2 { font-size: 1.2em; }
@@ -256,4 +269,6 @@ footer { border-top:3px solid #FF7A00; background-color: white;padding-top: 0; }
     .input_id input { width: 130px; padding-left: 20px; padding-right: 20px; }
     .input_name input, .input_nickname input { margin-left: 0; }
     .input_nickname button { margin-left: 2%; width: 60px; }
+
+    .add2 { width: 300px; }
 }
