--- a/src/main/resources/static/css/member.css
+++ b/src/main/resources/static/css/member.css
@@ -76,16 +76,18 @@ main { margin-top: 3%; }
 .side_2 { padding-left: 60px; }
 .go_planner button { margin-top: 20%; border: none; background-color: #FF7A00; border-radius: 10px; width: 130px; height: 50px; color: white; font-family: NPSfontRegular; font-size: 0.9em; }
 
-.memberFrm { background-color: #ededed; width: 650px; height: 840px; border-radius: 32px; padding: 20px 40px; }
+.memberFrm { background-color: #ededed; width: 650px;  border-radius: 32px; padding: 20px 40px; }
 .memberFrm div { margin-bottom: 30px; }
 .memberFrm h4 { font-family: NPSfontBold; font-size: 1.2em; padding-top: 10px; }
 
 .input_id input:focus, .input_name input:focus, .input_searchadd, .input_nickname input:focus, .input_pw input:focus, .input_pw2 input:focus, .input_phone input:focus, .input_address input { outline: none; }
 
 .input_id { display: flex; justify-content: space-between; width: 570px; align-items: center; }
-.input_id input { border: none; border-radius: 10px; width: 190px; height: 46px; padding-left: 20px; font-size: 0.9em; }
+.input_id input {margin-left: 2%; border: none; border-radius: 10px; width: 190px; height: 46px; font-size: 0.9em;padding-left: 20px; }
+.input_id .email_id {margin-left: 9%;}
+.input_id .domain {width: 150px;}
 
-.input_email input{margin-left: 11%;border: none;border-radius: 10px;width: 230px;height: 46px;padding-left: 20px;padding-right: 20px;font-size: 0.9em;}
+.input_email input{margin-left: 20%;border: none;border-radius: 10px;width: 230px;height: 46px;padding-left: 20px;padding-right: 20px;font-size: 0.9em;}
 .input_email button{ margin-left: 5%; border: none; background-color: #FF7A00; border-radius: 10px; width: 70px; height: 46px; font-size: 0.75em; font-family: NPSfontBold; color: white;}
 
 .input_name { display: flex; }
@@ -98,7 +100,7 @@ main { margin-top: 3%; }
 
 
 .input_searchadd { display: flex; }
-.input_searchadd input { margin-left: 11%; border: none; border-radius: 10px; width: 230px; height: 46px; padding-left: 20px; padding-right: 20px; font-size: 0.9em; }
+.input_searchadd input { margin-left: 15%; border: none; border-radius: 10px; width: 230px; height: 46px;  font-size: 0.9em; }
 .input_searchadd input::placeholder { text-align: center; font-size: 0.75em; }
 .input_searchadd button { margin-left: 5%; border: none; background-color: #FF7A00; border-radius: 10px; width: 70px; height: 46px; font-size: 0.75em; font-family: NPSfontBold; color: white; }
 
@@ -110,12 +112,13 @@ main { margin-top: 3%; }
 .input_pw input::placeholder { text-align: center; font-size: 0.75em; }
 
 .input_pw2 { display: flex; }
-.input_pw2 input { margin-left: 3.5%; width: 300px; height: 46px; border: none; border-radius: 10px; padding-left: 20px; padding-right: 20px; font-size: 0.9em; }
+.input_pw2 input { margin-left: 1.3%; width: 300px; height: 46px; border: none; border-radius: 10px; padding-left: 20px; padding-right: 20px; font-size: 0.9em; }
 .input_pw2 input::placeholder { text-align: center; font-size: 0.75em; }
 
 .input_phone { display: flex; align-items: center; }
 .input_phone h4 { margin-right: 7%; }
-.input_phone input { width: 70px; height: 46px; border: none; border-radius: 10px; padding-left: 20px; padding-right: 20px; }
+.input_phone .phone1{margin-left: 5%;}
+.input_phone input { width: 70px; height: 46px; border: none; border-radius: 10px;}
 
 .input_address { display: flex; align-items: center; }
 .input_address h4 { width: 50px; }
@@ -125,7 +128,10 @@ main { margin-top: 3%; }
 .add2::placeholder { font-size: 0.75em; text-align: center; }
 
 .email_radio, .sms_radio { display: flex; align-items: center; }
-.email_radio input, .sms_radio input { margin-left: 5%; }
+.email_radio input { margin-left: 5%; }
+.email_radio #n_email {margin-left: 5%;}
+.sms_radio input { margin-left: 5%; }
+.sms_radio #y_sms {margin-left:7.2%;}
 
 .member_subBtn { display: flex; justify-content: space-between; padding: 30px 120px; }
 .member_subBtn input { border: none; border-radius: 10px; background-color: #FF7A00; color: white; width: 120px; height: 50px; font-family: NPSfontBold; }
