--- a/src/main/resources/static/css/member.css
+++ b/src/main/resources/static/css/member.css
@@ -66,7 +66,7 @@ main { margin-top: 3%; }
 .memberPage_title { width: 130px; margin: 0 auto; margin-left: 30%; }
 .memberPage_title h2 { font-size: 1.7em; font-family: NPSfontBold; padding: 0 5px; }
 .bottom_line { width: 110px; border: 2px solid #FF7A00; border-radius: 32px; }
-.member_main { display: flex; justify-content: space-between; margin: 0 auto; margin-top: 3%; padding-left: 200px; padding-right: 500px; }
+.member_main { display: flex; justify-content: center; margin: 0 auto; margin-top: 3%; }
 
 .side_ad { background-color: #fdf0e7; width: 220px; height: 700px; border-radius: 32px; text-align: center; padding-top: 70px; padding-bottom: 70px; }
 .side_ad div { margin-top: 13%; }
@@ -280,4 +280,30 @@ footer { border-top:3px solid #FF7A00; background-color: white;padding-top: 0; }
     .input_nickname button { margin-left: 2%; width: 60px; }
 
     .add2 { width: 300px; }
+}
+
+@media screen and (min-width:300px) and (max-width:480px) {
+	 /* o */
+    /* 모바일 회원가입 폼 */
+    .memberFrm { background-color: #ededed; width: 365px; height: 1200px; border-radius: 32px; padding: 20px 30px; margin-left: 0; }
+    .memberFrm div { margin-bottom: 30px; }
+    .memberPage_title { margin-top: 10%; }
+    .memberPage_title h2 { font-size: 1.2em; }
+    .bottom_line { width: 80px; }
+    .input_id, .input_name, .input_phone { display: inline; }
+    .input_id h4, .input_name h4, .input_nickname h4, .input_pw h4, .input_pw2 h4, .input_phone h4, .input_address h4, .email_radio h4, .sms_radio h4 { font-size: 0.9em; }
+    .input_id input { width: 130px; padding-left: 20px; padding-right: 20px; }
+    .input_id .email_id {margin-left: 0%; width: 125px;}
+    .input_id button{ width: 100%; margin: 10px 0px;}
+    .input_id .domain {width: 150px}
+    .input_email input{  margin: 0 auto; width: 100%;}
+    .input_email button{ width: 100%; margin: 10px 0px;}
+    .input_name input {width: 300px;}
+ 	.input_nickname input { margin-left: 0; }
+    .input_nickname button { margin-left: 2%; width: 60px; }
+    .input_phone input {width: 86px; height: 46px; border: none; border-radius: 10px;}
+    .input_phone .phone1{margin-left: 0%;}
+
+    .add2 { width: 300px; }
+	
 }
