--- a/src/main/resources/static/css/member.css
+++ b/src/main/resources/static/css/member.css
@@ -62,7 +62,7 @@ a:hover { color: #FF7A00; }
 #banner #page_icon { float: right; height: 170px; width: 170px; }
 
 /* main 설정 */
-main { margin-top: 3%; }
+main { margin-top: 3%;  height: 1300px;}
 .memberPage_title { width: 130px; margin: 0 auto; margin-left: 30%; }
 .memberPage_title h2 { font-size: 1.7em; font-family: NPSfontBold; padding: 0 5px; }
 .bottom_line { width: 110px; border: 2px solid #FF7A00; border-radius: 32px; }
@@ -103,7 +103,8 @@ main { margin-top: 3%; }
 .input_searchadd input { margin-left: 15%; border: none; border-radius: 10px; width: 230px; height: 46px;  font-size: 0.9em; }
 .input_searchadd input::placeholder { text-align: center; font-size: 0.75em; }
 .input_searchadd button { margin-left: 5%; border: none; background-color: #FF7A00; border-radius: 10px; width: 70px; height: 46px; font-size: 0.75em; font-family: NPSfontBold; color: white; }
-
+.input_searchadd div .add1{width: 80%;  margin-top: 20px;}
+.input_searchadd div .add2{width: 80%;}
 
 
 
@@ -119,9 +120,9 @@ main { margin-top: 3%; }
 .input_phone h4 { margin-right: 7%; }
 .input_phone .phone1{margin-left: 5%;}
 .input_phone input { width: 70px; height: 46px; border: none; border-radius: 10px;}
-
-.input_address { display: flex; align-items: center; }
 .input_address h4 { width: 50px; }
+.input_address { display: flex; align-items: center; }
+
 .input_address input { border: none; border-radius: 10px; padding-left: 20px; padding-right: 20px; }
 .add1 { margin-left: 10%; width: 300px; height: 46px; }
 .add2 { margin-left: 10%; margin-top: 2%; width: 300px; height: 46px; }
@@ -134,8 +135,8 @@ main { margin-top: 3%; }
 .sms_radio #y_sms {margin-left:7.2%;}
 
 .member_subBtn { display: flex; justify-content: space-between; padding: 30px 120px; }
-.member_subBtn input { border: none; border-radius: 10px; background-color: #FF7A00; color: white; width: 120px; height: 50px; font-family: NPSfontBold; }
-
+.member_subBtn input { border: none; border-radius: 10px; background-color: #FFA24D; color: white; width: 120px; height: 50px; font-family: NPSfontBold; }
+.member_subBtn input:last-child{ background-color: #FF7A00;}
 
 /* footer 설정 */
 footer { border-top:3px solid #FF7A00; background-color: white;padding-top: 0; }
@@ -228,8 +229,8 @@ footer { border-top:3px solid #FF7A00; background-color: white;padding-top: 0; }
     .add2 { margin-top: 2%; }
 
     .member_subBtn { display: flex; justify-content: space-between; padding: 80px 0px; }
-    .member_subBtn input { width: 120px; height: 50px; color: white; background-color: #FF7A00; font-family: NPSfontBold; }
-
+    .member_subBtn input { width: 120px; height: 50px; color: white; background-color: #FF7A00; font-family: NPSfontBold; }	.member_subBtn input {  color: white; background-color: #FFA24D; font-family: NPSfontBold}
+	.member_subBtn input:last-child{ background-color: #FF7A00;}
     .add2 { width: 300px; }
 }
 
@@ -286,7 +287,6 @@ footer { border-top:3px solid #FF7A00; background-color: white;padding-top: 0; }
 	 /* o */
     /* 모바일 회원가입 폼 */
     .memberFrm { background-color: #ededed; width: 365px; height: 1200px; border-radius: 32px; padding: 20px 30px; margin-left: 0; }
-    .memberFrm div { margin-bottom: 30px; }
     .memberPage_title { margin-top: 10%; }
     .memberPage_title h2 { font-size: 1.2em; }
     .bottom_line { width: 80px; }
@@ -296,6 +296,7 @@ footer { border-top:3px solid #FF7A00; background-color: white;padding-top: 0; }
     .input_id .email_id {margin-left: 0%; width: 125px;}
     .input_id button{ width: 100%; margin: 10px 0px;}
     .input_id .domain {width: 150px}
+   	.input_email {  margin: 0%; }
     .input_email input{  margin: 0 auto; width: 100%;}
     .input_email button{ width: 100%; margin: 10px 0px;}
     .input_name input {width: 300px;}
@@ -303,7 +304,15 @@ footer { border-top:3px solid #FF7A00; background-color: white;padding-top: 0; }
     .input_nickname button { margin-left: 2%; width: 60px; }
     .input_phone input {width: 86px; height: 46px; border: none; border-radius: 10px;}
     .input_phone .phone1{margin-left: 0%;}
-
+	.input_searchadd h4 {position: absolute;}
+	.input_searchadd div {margin-top: 30px;}
+	.input_searchadd div button{width: 50px;}
+	.input_searchadd div .add1{width: 100%;}
+	.input_searchadd div .add2{width: 100%;}
+	.email_radio #n_email {margin-left: 0%;}
+	.sms_radio #y_sms {margin-left: 0%;}
     .add2 { width: 300px; }
-	
+	.member_subBtn { display: flex;  }
+	.member_subBtn input {  color: white; background-color: #FFA24D; font-family: NPSfontBold}
+	.member_subBtn input:last-child{ background-color: #FF7A00;}
 }
